--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="pst_absolute left_50 tra_x50 top_60   zdex_2  rotate_0">
-                <img class="wpx_220 zdex_2 observado animate__rollIn " src="cen.png">
+                <img class="wpx_220 zdex_2 observado animate__rollIn opacity_05 filter_clian " src="cen.png">
             </div>
 
 
